Variadic route options
